--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "parser": "babel-eslint",
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "mocha": true
   },
   "extends": ["airbnb-base", "prettier"],
   "plugins": ["prettier"],
