--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "@dollarshaveclub/cloudworker": "^0.0.11",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "babel-preset-env": "^1.7.0",
-    "css-loader": "^1.0.1",
+    "css-loader": "^2.0.1",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "2.9.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-prettier": "2.6.1",
-    "eslint-watch": "^4.0.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-watch": "^5.1.2",
     "extract-loader": "^3.0.0",
-    "file-loader": "^2.0.0",
+    "file-loader": "^3.0.0",
     "mocha": "^6.1.4",
     "prettier": "^1.14.3",
     "style-loader": "^0.23.1",
+    "typescript": "^3.4.5",
     "webpack": "^4.24.0",
     "webpack-cli": "^3.1.2",
     "yarn-run-all": "^3.1.1"
