--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,13 @@
     "es6": true,
     "mocha": true
   },
-  "extends": ["airbnb-base", "prettier"],
-  "plugins": ["prettier"],
+  "extends": [
+    "airbnb-base",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "globals": {
     "document": true,
     "window": true,
@@ -16,7 +21,9 @@
     "INSTALL_ID": false,
     "INSTALL_SCOPE": false,
     "INSTALL_OPTIONS": false,
-    "INSTALL_PRODUCT": false
+    "INSTALL_PRODUCT": false,
+    "CF_APP_VERSION": false
+
   },
   "rules": {
     "class-methods-use-this": 0,
@@ -35,6 +42,6 @@
     "consistent-return": 0,
     "no-console": 0,
     "no-debugger": 0,
-    "prettier/prettier": "error"
+    "prettier/prettier": "warn"
   }
 }
