--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
   "version": "0.4.0",
   "description": "Logflare App for Cloudflare",
   "scripts": {
-    "start": "npm-run-all dev:setup dev:webpack",
-    "dev:webpack": "webpack --watch --colors",
+    "start": "npm-run-all dev:setup dev:wrangler",
+    "dev:wrangler": "wrangler preview --watch",
     "dev:setup": "npm-run-all lint",
-    "build": "npm-run-all lint build:webpack",
-    "build:webpack": "NODE_ENV=production webpack --colors",
+    "build:prod": "npm-run-all lint; wrangler build -e production",
+    "build:dev": "npm-run-all lint; wrangler build",
     "lint": "node_modules/.bin/eslint --fix --ext .js src workers",
     "test": "mocha",
-    "test:watch": "mocha --watch",
-    "deploy:staging": "node staging-workflow.js"
+    "test:watch": "mocha --watch"
   },
   "repository": {
     "type": "git",
@@ -23,8 +22,7 @@
     "url": "https://github.com/Logflare/cloudflare-app/issues"
   },
   "homepage": "https://logflare.app/",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@dollarshaveclub/cloudworker": "^0.1.2",
